pulsedesk/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsedesk
  namespace: ${NAMESPACE}
  labels:
    app: pulsedesk

spec:
  replicas: ${REPLICAS}

  selector:
    matchLabels:
      app: pulsedesk

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  template:
    metadata:
      labels:
        app: pulsedesk

    spec:
      serviceAccountName: backend-sa

      containers:
        - name: pulsedesk
          image: ${IMAGE_URI}
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: ${REQUEST_CPU}
              memory: ${REQUEST_MEMORY}
            limits:
              cpu: ${LIMIT_CPU}
              memory: ${LIMIT_MEMORY}

          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets
              readOnly: true

      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: aws-secrets
