pulsedesk/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulsedesk-service
  namespace: ${NAMESPACE}
  labels:
    app: pulsedesk
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: pulsedesk
  ports:
    - port: 80
      targetPort: 8080
